--- a/applied-hash/commitments/preamble.tex
+++ b/applied-hash/commitments/preamble.tex
@@ -23,17 +23,21 @@
 
 \let\email\texttt
 
-\usepackage[outputdir=ltxobj]{minted}
+\usepackage{minted}
 \setminted{autogobble,fontsize=\footnotesize}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{amsthm}
-\usepackage{thmtools}
-\usepackage[unq]{unique}
+\usepackage{unique}
 \DeclareMathOperator{\powerset}{\mathcal{P}}
 
 \usepackage[binary-units]{siunitx}
 
 \usepackage{bibsp}
+
+% Crypto notation (see writing-crypto)
+\NewAlgorithm{\Enc}{Enc}
+\NewFunction{\Hash}{H}
+%\DeclareMathOperator{\concat}{\Vert}
