Fixes commitments preamble

--- a/applied-hash/commitments/notes.tex
+++ b/applied-hash/commitments/notes.tex
@@ -11,18 +11,8 @@
 %\usepackage{authblk}
 %\let\institute\affil
 
-\declaretheorem[numbered=unless unique,style=theorem]{theorem}
-\declaretheorem[numbered=unless unique,style=definition]{definition}
-\declaretheorem[numbered=unless unique,style=definition]{assumption}
-\declaretheorem[numbered=unless unique,style=definition]{protocol}
-\declaretheorem[numbered=unless unique,style=example]{example}
-%\declaretheorem[style=definition,numbered=unless unique,
-%  name=Example,refname={example,examples}]{example}
-\declaretheorem[numbered=unless unique,style=remark]{remark}
-\declaretheorem[numbered=unless unique,style=remark]{idea}
-\declaretheorem[numbered=unless unique,style=exercise]{exercise}
-\declaretheorem[numbered=unless unique,style=exercise]{question}
-\declaretheorem[numbered=unless unique,style=solution]{solution}
+% The beamerarticle package + didactic/beamer already provide theorem-like
+% environments. Re-declaring them breaks with the newer TeX Live releases.
 
 \begin{document}
 \title{%
