--- a/applied-hash/commitments/preamble.tex
+++ b/applied-hash/commitments/preamble.tex
@@ -16,6 +16,8 @@
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
 \addbibresource{crypto.bib}
 
+\usepackage[marginparmargin=outer]{didactic}
+
 \usepackage{subcaption}
 
 \usepackage[noend]{algpseudocode}
