Refine commitment slides
Rework the motivating example to a guess-a-number commitment game and present three solution attempts: hash-only, hash+randomness, and a one-time MAC-key view.\n\nStandardize notation with Encode/Commit/Open, add explicit hiding-vs-binding tension plus an OTP comparison, and avoid post-pause solutions by splitting into separate frames.

--- a/applied-hash/commitments/preamble.tex
+++ b/applied-hash/commitments/preamble.tex
@@ -40,6 +40,9 @@
 \usepackage{bibsp}
 
 % Crypto notation (see writing-crypto)
-\NewAlgorithm{\Enc}{Enc}
+\NewAlgorithm{\Encode}{Encode}
+\NewAlgorithm{\Commit}{Commit}
+\NewAlgorithm{\Open}{Open}
 \NewFunction{\Hash}{H}
+\NewFunction{\Mac}{Mac}
 %\DeclareMathOperator{\concat}{\Vert}
