--- a/applied-hash/commitments/contents.tex
+++ b/applied-hash/commitments/contents.tex
@@ -45,151 +45,158 @@
 \section{Commitments}
 
 \begin{frame}
-  \begin{example}[I want to be fair, but I don't trust you (and you don't trust me)]
+  \begin{example}[Guess a number]
     \begin{itemize}
-      \item Alice wants to write down a prediction (or a bid) \emph{now}.
-      \item Alice wants to reveal it \emph{later}, after Bob has made a choice.
+      \item Eve chooses a secret number/message \(m\).
+      \item Alice will guess \(m\).
+      \item Eve must \emph{commit} to \(m\) before Alice starts guessing.
+      \item Eve will try to cheat if she can.
     \end{itemize}
   \end{example}
 
-  \pause{}
-
   \begin{exercise}[Try first]
-    Design a protocol for this situation.
+    Design a protocol.
 
-    \begin{itemize}
-      \item Alice should not be able to change her mind after seeing Bob's
-        message.
-      \item Bob should not learn Alice's choice before he sends his message.
-    \end{itemize}
+    \begin{description}
+      \item[Hiding] Alice should not learn \(m\) from the first message.
+      \item[Binding] Eve should not be able to change \(m\) after Alice starts
+        guessing.
+    \end{description}
 
-    What could Alice send in the first round?
+    What could Eve send before the game starts?
   \end{exercise}
 
   \ltnote{%
-    \textbf{Try-first--tell-later}: We start with a concrete fairness problem.
+    \textbf{Try-first--tell-later}: We start with a concrete two-party fairness
+    problem.
 
-    \textbf{Variation pattern}: Generalization
+    \textbf{Critical aspects}: two different goals (hiding vs binding).
 
-    Students have already seen week 2 protocols with two phases
-    (send something, then send something else) and security properties
-    (confidentiality vs integrity). Here we keep the idea of a short tag
-    invariant, and vary the trust setting: no shared secret with the verifier.
+    \textbf{Variation pattern}: Generalization.
   }
 \end{frame}
 
 \begin{frame}
-  \begin{block}{From week 2: hash functions and \acp{MAC}}
-    \begin{description}
-      \item[\acp{MAC}] detect modifications using a shared secret.
-      \item[Commitments] \emph{no shared secret} with the verifier.
-    \end{description}
-
-    \pause{}
-
+  \begin{block}{Hash functions and \acp{MAC}}
     \begin{itemize}
-      \item We want to \emph{lock in} a value now and \emph{reveal} it later.
-      \item This comes up in sealed bids, predictions, coin flipping, \dots
+      \item Both take a long input and output a short string.
+      \item We will use them to \emph{lock in} a value now and \emph{reveal} it
+        later.
     \end{itemize}
   \end{block}
 \end{frame}
 
 \begin{frame}
-  \begin{definition}[Commitment scheme (informal)]
-    A commitment scheme is a two-phase protocol:
-    \begin{description}
-      \item[Commit] choose message \(m\) and randomness \(r\), output a
-        commitment \(c\).
-      \item[Open] reveal \((m, r)\); the verifier checks that it matches \(c\).
-    \end{description}
-  \end{definition}
+  \begin{block}{Solution attempt 1: hash only (no randomness)}
+    Eve sends \(c = \Hash[m]\).
 
-  \pause{}
-
-  \begin{definition}[Security goals]
-    \begin{description}
-      \item[Hiding] seeing \(c\) should not reveal \(m\).
-      \item[Binding] after sending \(c\), it should be hard to open it to a
-        different message.
-    \end{description}
-  \end{definition}
-
-  \ltnote{%
-    \textbf{Variation pattern}: Contrast
-
-    We explicitly contrast the two goals (hiding vs binding). Students often
-    conflate them, or only reason about one adversary. This prepares the later
-    coin-flipping example where different failures benefit different parties.
-  }
+    Later, Eve reveals \(m\) and Alice checks \(\Hash[m] \stackrel?= c\).
+  \end{block}
 \end{frame}
 
-\begin{frame}[fragile]
-  \begin{exercise}
-    Suppose Alice commits to \(m\) by sending \(c = H(m)\).
+\begin{frame}
+  \begin{description}
+    \item[Binding] looks plausible (needs collision resistance).
+    \item[Hiding] fails if \(m\) is guessable (brute force).
+  \end{description}
+\end{frame}
 
-    \begin{itemize}
-      \item Is this hiding?
-      \item Is this binding?
-      \item When would it be obviously insecure?
-    \end{itemize}
-  \end{exercise}
+\begin{frame}
+  \begin{block}{Solution attempt 2: hash + randomness}
+    Eve samples fresh randomness \(r\) and sends
+    \[c = \Hash[\Encode(r,m)].\]
 
-  \pause{}
+    Later, Eve reveals \((m,r)\). Alice checks
+    \(\Hash[\Encode(r,m)] \stackrel?= c\).
+  \end{block}
+\end{frame}
 
-  \begin{remark}[Why we need randomness]
-    \begin{itemize}
-      \item If \(m\) comes from a small set (\enquote{yes/no}, \enquote{0--9},
-        short passwords), Bob can try all candidates.
-      \item So we commit to \emph{(randomness, message)}, not just the message.
-    \end{itemize}
-  \end{remark}
+\begin{frame}
+  \begin{description}
+    \item[Binding] still relates to collision resistance.
+    \item[Hiding] improves if \(r\) has high entropy.
+  \end{description}
 
   \ltnote{%
-    \textbf{Try-first--tell-later}: Students first analyze an almost-correct
-    construction.
+    \textbf{Variation pattern}: Contrast.
 
-    \textbf{Variation pattern}: Contrast
-
-    \textbf{What varies}: Whether the commitment uses randomness \(r\) or not.
-
-    \textbf{What stays invariant}: Same hash function \(H\) and the same goal:
-    \enquote{send a short string now, open later}.
-
-    This makes the critical aspect \enquote{entropy for hiding} discernible.
+    We vary one critical aspect: add randomness \(r\). The protocol structure is
+    otherwise invariant.
   }
 \end{frame}
 
 \begin{frame}
-  \begin{definition}[Hash-based commitment]
-    Fix a hash function \(H\). To commit to message \(m\):
-    \begin{enumerate}
-      \item Pick fresh, high-entropy randomness \(r\).
-      \item Compute \(c = \Hash[\Enc[r\concat m]]\) (i.e., hash an
-        unambiguous encoding of \(r\) and \(m\)).
-      \item Send \(c\).
-    \end{enumerate}
+  \begin{block}{Solution attempt 3: \ac{MAC} with one-time key}
+    Eve samples fresh randomness \(r\) and sends the tag
+    \[t = \Mac[r][m].\]
 
-    \pause{}
+    Later, Eve reveals \((m,r)\). Alice checks \(\Mac[r][m] \stackrel?= t\).
+  \end{block}
+\end{frame}
 
-    To open, reveal \((m, r)\). Verifier checks
-    \(\Hash[\Enc[r\concat m]] \stackrel?= c\).
+\begin{frame}
+  \begin{description}
+    \item[Hiding] Alice cannot test guesses without knowing \(r\).
+    \item[Binding] Eve cannot easily find \(m'\neq m\) with the same tag.
+  \end{description}
+\end{frame}
+
+\begin{frame}
+  \begin{definition}[Commitment scheme]
+    A commitment scheme has two algorithms:
+    \begin{description}
+      \item[\Commit] take a message \(m\), output a commitment \(c\).
+      \item[\Open] reveal information that convinces the verifier that \(c\)
+        corresponds to \(m\).
+    \end{description}
   \end{definition}
 
-  \pause{}
+  \begin{definition}[Security goals]
+    \begin{description}
+      \item[Hiding] seeing \(c\) should not reveal \(m\).
+      \item[Binding] after seeing \(c\), it should be hard to open it to a
+        different message \(m'\neq m\).
+    \end{description}
+  \end{definition}
+\end{frame}
 
-  \begin{exercise}
-    Which property of \(H\) from week 2 do you think relates most to binding?
-  \end{exercise}
+\begin{frame}
+  \begin{block}{Hiding vs binding: extremes}
+    \begin{description}
+      \item[Perfectly binding, not hiding] send \(m\) directly.
+      \item[Perfectly hiding, not binding] send a random \(c\) independent of
+        \(m\).
+    \end{description}
+
+    A useful commitment needs \emph{both}: hiding for the guesser and binding for
+    fairness.
+  \end{block}
 
   \ltnote{%
-    \textbf{Try-first--tell-later}: Ask the linking question before giving the
-    proof idea.
+    \textbf{Variation pattern}: Contrast.
 
-    \textbf{Variation pattern}: Generalization
-
-    Not new primitives: same hash notions as in week 2, new use case.
-    We keep \(H\) invariant and only vary the surrounding protocol.
+    We contrast the two extreme failure modes to make the tension between the
+    goals visible.
   }
+\end{frame}
+
+\begin{frame}
+  \begin{remark}[Comparison: OTP and perfect secrecy]
+    \begin{description}
+      \item[OTP] perfectly hiding: \(c = m \oplus k\) with fresh random key \(k\).
+      \item[Commitment] must be both hiding and binding.
+    \end{description}
+
+    The OTP achieves perfect secrecy because the ciphertext distribution is
+    independent of \(m\). By contrast, a commitment cannot be independent of
+    \(m\), otherwise it would not bind.
+  \end{remark}
+\end{frame}
+
+\begin{frame}
+  \begin{exercise}
+    In the hash-based constructions, which hash property relates most to binding?
+  \end{exercise}
 \end{frame}
 
 \begin{frame}
@@ -197,7 +204,7 @@
     \begin{description}
       \item[Binding] If Alice can open \(c\) as \((m, r)\) and also as
         \((m', r')\) with \(m\neq m'\), then she found a collision:
-        \(\Hash[\Enc[r\concat m]] = \Hash[\Enc[r'\concat m']]\).
+        \(\Hash[\Encode(r,m)] = \Hash[\Encode(r',m')]\).
       \item[Hiding] If \(r\) is fresh and unpredictable, then \(c\) does not
         reveal \(m\) (informally: it looks like a random hash output).
     \end{description}
@@ -219,13 +226,11 @@
   \begin{example}[Coin flipping over the network]
     \begin{enumerate}
       \item Alice chooses a random bit \(a\) and randomness \(r\).
-        She sends \(c = \Hash[\Enc[r\concat a]]\).
+        She sends \(c = \Hash[\Encode(r,a)]\).
       \item Bob chooses a random bit \(b\) and sends \(b\).
       \item Alice opens by sending \((a, r)\). Result is \(a\oplus b\).
     \end{enumerate}
   \end{example}
-
-  \pause{}
 
   \begin{exercise}
     Who could cheat if (1) hiding failed? (2) binding failed?
@@ -244,23 +249,23 @@
 \begin{frame}
   \begin{exercise}[Try first]
     Alice commits to \((r,m)\) by sending the string
-    \(\Enc[r]\concat\Enc[m]\).
+    \(\Encode(r)\concat\Encode(m)\).
 
     \begin{itemize}
-      \item What could go wrong if \(\Enc\) is just
+      \item What could go wrong if \(\Encode\) is just
         \enquote{write the bits with no delimiter and no length}?
       \item Can you find two different pairs \((r,m)\neq(r',m')\) that yield the
         same concatenation?
     \end{itemize}
   \end{exercise}
+\end{frame}
 
-  \pause{}
-
+\begin{frame}
   \begin{remark}[Encoding must be unambiguous]
     Two common fixes:
     \begin{description}
       \item[Length-prefix] Encode as
-        \(\Enc[ r,m ]=\langle |r|,r,m\rangle\) (store the bit-length of \(r\) first).
+        \(\Encode(r,m)=\langle |r|,r,m\rangle\) (store the bit-length of \(r\) first).
       \item[Structured format] Use a canonical serialization (e.g., CBOR/ASN.1/
         Protocol Buffers) with domain separation.
     \end{description}
@@ -293,35 +298,27 @@
 \section{Keyed hash functions}
 
 \begin{frame}
-  \begin{block}{How this relates to \ac{HMAC} (week 2)}
+  \begin{block}{How this relates to \ac{HMAC}}
     \begin{description}
       \item[\ac{HMAC}] integrity/authenticity with a shared secret key \(k\).
-      \item[Commitment] 
-        \begin{itemize}
-          \item no shared secret with verifier,
-          \item randomness \(r\) is revealed later,
-          \item goal is \emph{time separation}: commit now, open later.
-        \end{itemize}
+      \item[Commitment] use public verification: anyone can check an opening.
     \end{description}
   \end{block}
 
-  \pause{}
 
+  \ltnote{%
+    \textbf{Variation pattern}: Contrast.
+
+    Students compare \enquote{shared secret key} (HMAC) with \enquote{randomness
+    revealed later} (commitment).
+  }
+\end{frame}
+
+\begin{frame}
   \begin{exercise}
     If you \emph{did} share a secret key with the verifier, would you still need
     randomness \(r\) to hide the message?
   \end{exercise}
-
-
-  \ltnote{%
-    \textbf{Variation pattern}: Contrast
-
-    Students compare \enquote{shared secret key} (MAC) with \enquote{randomness
-    revealed later} (commitment).
-
-    This supports concept separation: the key gives authenticity, the randomness
-    gives hiding in commitments.
-  }
 \end{frame}
 
 \begin{frame}
@@ -329,7 +326,7 @@
     \begin{itemize}
       \item Commitments are \emph{not} encryption and \emph{not} MACs.
       \item Hash-based commitments are simple:
-        \(c = \Hash[\Enc[r\concat m]]\) with an unambiguous encoding.
+        \(c = \Hash[\Encode(r,m)]\) with an unambiguous encoding.
       \item Binding \(\approx\) collision resistance; hiding \(\approx\)
         high-entropy randomness \(r\).
     \end{itemize}
