--- a/applied-hash/hash-review.tex
+++ b/applied-hash/hash-review.tex
@@ -1,6 +1,6 @@
 \mode*
 
-\section[Hash functions]{What was a hash function now again?}
+%\section[Hash functions]{What was a hash function now again?}
 
 %\begin{frame}
 %  \begin{definition}[One-way function\footfullcite{GoldreichFOC-1}]
