--- a/applied-hash/tutorial/contents.tex
+++ b/applied-hash/tutorial/contents.tex
@@ -1,14 +1,14 @@
 \mode*
 
-\section{Difficult parts}
-
-\begin{frame}
-  \begin{question}
-    \begin{itemize}
-      \item What were the most difficult parts in the prep material?
-    \end{itemize}
-  \end{question}
-\end{frame}
+%\section{Difficult parts}
+%
+%\begin{frame}
+%  \begin{question}
+%    \begin{itemize}
+%      \item What were the most difficult parts in the prep material?
+%    \end{itemize}
+%  \end{question}
+%\end{frame}
 
 \section{A secure guessing game}
 
