--- a/applied-hash/tutorial/preamble.tex
+++ b/applied-hash/tutorial/preamble.tex
@@ -23,7 +23,8 @@
 
 \let\email\texttt
 
-\usepackage[outputdir=ltxobj]{minted}
+%\usepackage[outputdir=ltxobj]{minted}
+\usepackage{minted}
 \setminted{autogobble}
 
 \usepackage{amsmath}
