--- a/applied-hash/blockchains/notes.tex
+++ b/applied-hash/blockchains/notes.tex
@@ -5,6 +5,8 @@
 
 \input{preamble.tex}
 
+\usepackage[marginparmargin=outer]{didactic}
+
 \usepackage[noamsthm,notheorems]{beamerarticle}
 \setjobnamebeamerversion{slides}
 
