--- a/applied-hash/blockchains/preamble.tex
+++ b/applied-hash/blockchains/preamble.tex
@@ -7,7 +7,6 @@
 \renewcommand{\foreignfullfont}{}
 \renewcommand{\foreignabbrfont}{}
 
-\usepackage{newclude}
 \usepackage{import}
 
 \usepackage[strict]{csquotes}
@@ -24,7 +23,7 @@
 
 \let\email\texttt
 
-\usepackage[outputdir=ltxobj]{minted}
+\usepackage{minted}
 \setminted{autogobble,fontsize=\footnotesize}
 
 \usepackage{amsmath}
